--- a/barcode_sales.html
+++ b/barcode_sales.html
@@ -6,7 +6,8 @@
   <title>مبيعات بالباركود</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+   <script src="{{ url_for('static', filename='js/html5-qrcode.min.js')}}"></script>
+  <!-- مكتبة ZXing لتحسين قراءة الرموز (اختياري ولكن مفيد) -->
   <script src="{{ url_for('static', filename='js/zxing-js.umd.js')}}"></script>
   <style>
     :root {
